
	Bug fixes:
		-[Core] Registration of conditional closed-generic types prevented when container allows
		 overriding registrations. (fixes #216)
		-[WCF] WCF integration failed to create WCF services marked with InstanceContextMode.Single.
		 (fixes #197)
		-[Core] Mixing conditional and unconditional registrations for same closed-generic type did not fail
		 at registration time. (fixes #217)


Version 3.1.2 (v3.1.2 RTM) 2015-12-13

	Improvements/Changes:
		-[Core] DNXCORE50/CoreCLR version available. (fixes #57)
		-[LifetimeScoping] DNXCORE50/CoreCLR version available. (fixes #57)
		-[ExecutionContextScoping] DNXCORE50/CoreCLR version available. (fixes #57)
		-[Core] Memory usage of Scope instances reduced after scope is disposed. (fixes #160)

	Bug fixes:
		-[LifetimeScoping] GetCurrentLifetimeScope() will never return disposed scopes anymore. (fixes #159)
		-[ExecutionContextScoping] GetCurrentExecutionContextScope() will never return disposed scopes anymore. (fixes #159)


Version 3.1.1 (v3.1.1 RTM) 2015-11-23

	Bug fixes:
		-[Core] Container instance was rooted in case decorators where used. (fixes #135)
		-[Core] Lifestyle mismatch was not detected in a deeper part of the object graph when GetInstance was
		 called. (fixes #140)


Version 3.1.0 (v3.1.0 RTM) 2015-10-09

	Improvements/Changes:
		-[Core] Lifestyle.CreateProducer<TService>(Type, Container) overload added. (fixes #100)
		-[Core] Container.RegisterConditional overload added that accepts an Registration. (fixes #102)
		-[Core] Container.GetTypesToRegister overload added that accepts an TypesToRegisterOptions to allow
		 excluding composites and including decorators and generic type definitions. (fixes #122)
		-[Core] RegisterCollection overloads that accept a list of assemblies now suppress composite types.
		 (fixes  #119)
		-[Core] Improved performance of GetTypesToRegister method and the Register and RegisterCollection
		 overloads that accept a list of collections.