@@ -16,6 +16,8 @@ Version 3.1.3 (v3.1.3 RTM)
 		 (fixes #197)
 		-[Core] Mixing conditional and unconditional registrations for same closed-generic type did not fail
 		 at registration time. (fixes #217)
+		-[Core] Conditional registration for closed-generic types replaced earlier registrations instead of 
+		 being appended. (fixes #186)
 
 
 Version 3.1.2 (v3.1.2 RTM) 2015-12-13
